--- a/poolnorth.html
+++ b/poolnorth.html
@@ -44,13 +44,13 @@
       <div class="hero">
           <h1>South Austin Pools</h1>
       </div>
-    <div class="poolimgsolo">
-      <ul class="bxslider">
-    <li><img src="images/Slider_dicknichols.jpg"/></li>
-    <li><img src="images/Slider_dicknichols2.jpg"/></li>
-    <li><img src="images/slider_addphoto.jpg"/></li>
-  </ul>
-    </div>
+      <div class="poolimgsolo">
+        <ul class="bxslider">
+      <li><img src="images/Slider_Dicknichols.jpg"/></li>
+      <li><img src="images/dicknichols2.jpg"/></li>
+      <li><img src="images/slider_addphoto.jpg"/></li>
+      </ul>
+      </div>
     <div class="poolfacts">
         <div class="pooltext">
           <h2>Dick Nichols Pool</h2>
@@ -86,13 +86,13 @@
     </div>
   </div>
   <div class="poolcontainer">
-  <div class="poolimgsolo">
-    <ul class="bxslider">
-  <li><img src="images/slider_Big-Stacy.jpg"/></li>
-  <li><img src="images/Slider_bigstacy.jpg"/></li>
-  <li><img src="images/slider_addphoto.jpg"/></li>
-</ul>
-  </div>
+    <div class="poolimgsolo">
+      <ul class="bxslider">
+    <li><img src="images/Slider_Big-Stacy.jpg"/></li>
+    <li><img src="images/slide_bigstacy.jpg"/></li>
+    <li><img src="images/slider_addphoto.jpg"/></li>
+    </ul>
+    </div>
   <div class="poolfacts">
       <div class="pooltext">
         <h2>Big Stacy Pool</h2>
