--- a/poolnorth.html
+++ b/poolnorth.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>South Austin Pools</title>
      <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet"/>
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -88,8 +89,8 @@
   <div class="poolcontainer">
     <div class="poolimgsolo">
       <ul class="bxslider">
-    <li><img src="images/Slider_Big-Stacy.jpg"/></li>
-    <li><img src="images/slide_bigstacy.jpg"/></li>
+    <li><img src="images/slider_bs.jpg"/></li>
+    <li><img src="images/slider_bstwo.jpg"/></li>
     <li><img src="images/slider_addphoto.jpg"/></li>
     </ul>
     </div>
