--- a/poolnorth.html
+++ b/poolnorth.html
@@ -48,7 +48,7 @@
       <div class="poolimgsolo">
         <ul class="bxslider">
       <li><img src="images/Slider_Dicknichols.jpg"/></li>
-      <li><img src="images/dicknichols2.jpg"/></li>
+      <li><img src="images/Slider_dicknichols2.jpg"/></li>
       <li><img src="images/slider_addphoto.jpg"/></li>
       </ul>
       </div>
