pushing up edits to typography and icons

--- a/poolmain.html
+++ b/poolmain.html
@@ -21,7 +21,7 @@
               <a href="poolmain.html">Pools</a>
               <ul class="dropnav">
                 <li><a href="poolnorth.html">North Austin</a></li>
-                <li><a href="poolnorth.html">South Austin</a></li>
+                <li><a href="poolsouth.html">South Austin</a></li>
                 <li><a href="poolnorth.html">East Austin</a></li>
                 <li><a href="poolnorth.html">West Austin</a></li>
               </ul>
@@ -58,6 +58,7 @@
         <div id="region">
           <div class="regionheader">
             <h1>Austin Pools</h1>
+            <p> Select a region to view pool pictures, see pool details and check out seasonal schedules.</p>
           </div>
           <div class="regionimg">
           <h2>North Austin</h2><div class="imgWrap">
@@ -66,7 +67,7 @@
           </div></div>
           <div class="regionimg"><h2>South Austin</h2><div class="imgWrap">
           <img class="poolimg" src="images/dicknicholssmall.jpg"/>
-          <a href="poolnorth.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View South<br> Austin Pools</p></a>
+          <a href="poolsouth.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View South<br> Austin Pools</p></a>
         </div></div>
           <div class="regionimg"><h2>West Austin</h2><div class="imgWrap">
           <img class="poolimg" src="images/deepeddysmall.jpg"/>
