--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <a href="poolmain.html">Pools</a>
               <ul class="dropnav">
                 <li><a href="poolnorth.html">North Austin</a></li>
-                <li><a href="poolnorth.html">South Austin</a></li>
+                <li><a href="poolsouth.html">South Austin</a></li>
                 <li><a href="poolnorth.html">East Austin</a></li>
                 <li><a href="poolnorth.html">West Austin</a></li>
               </ul>
@@ -64,7 +64,7 @@
           </div><h2>North Austin</h2></div>
           <div class="regionimg"><div class="imgWrap">
           <img class="poolimg" src="images/dicknicholssmall.jpg"/>
-          <a href="poolnorth.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View Pools</p></a>
+          <a href="poolsouth.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View Pools</p></a>
         </div><h2>South Austin</h2></div>
           <div class="regionimg"><div class="imgWrap">
           <img class="poolimg" src="images/deepeddysmall.jpg"/>
