--- a/training.html
+++ b/training.html
@@ -19,7 +19,7 @@
               <a href="poolmain.html">Pools</a>
               <ul class="dropnav">
                 <li><a href="poolnorth.html">North Austin</a></li>
-                <li><a href="poolnorth.html">South Austin</a></li>
+                <li><a href="poolsouth.html">South Austin</a></li>
                 <li><a href="poolnorth.html">East Austin</a></li>
                 <li><a href="poolnorth.html">West Austin</a></li>
               </ul>
@@ -63,13 +63,13 @@
   </div>
     </div>
     <div id="technique">
-      <img src="images/whistlesolo.png">
+      <img class= "whistleimg" src="images/technique_1.png">
       <h1>Technique</h1>
       <h2>Training videos and resources to help you improve technique</h2>
       <div class="techniquecontainer">
       <div id="videos"><h2>Insructional Videos</h2><iframe width="350" height="300" src="https://www.youtube.com/embed/videoseries?list=PLyaEpFLI7bLZlG1azBwB5oNftggjMpgjS" frameborder="0" allowfullscreen></iframe></div>
       <div id="books"><h2>Training Books</h2>
-        <div class="bookimg"><a  href="https://www.amazon.com/Waterproof-Coach-Workout-Swimmers-Triathletes/dp/0965623009/ref=sr_1_3?ie=UTF8&qid=1485727287&sr=8-3&keywords=swim+workout+book" target="_blank"><img src="images/waterproofcoach.jpeg"></a></div><div class="bookinfo"><h3>The Waterproof Coach</h3><p>A waterproof book of customizable workouts</p></div>
+      <div class="bookimg"><a  href="https://www.amazon.com/Waterproof-Coach-Workout-Swimmers-Triathletes/dp/0965623009/ref=sr_1_3?ie=UTF8&qid=1485727287&sr=8-3&keywords=swim+workout+book" target="_blank"><img src="images/waterproofcoach.jpeg"></a></div><div class="bookinfo"><h3>The Waterproof Coach</h3><p>A waterproof book of customizable workouts</p></div>
       <div class="bookimg"><a  href="https://www.amazon.com/100-Best-Swimming-Drills/dp/1841263370/ref=sr_1_5?ie=UTF8&qid=1485727287&sr=8-5&keywords=swim+workout+book" target="_blank"><img src="images/100best.jpeg"></a></div><div class="bookinfo"><h3>The 100 Best Swimming Drills</h3><p>A guide to improving technique with drills</p></div>
       <div class="bookimg"><a  href="https://www.amazon.com/Total-Immersion-Revolutionary-Better-Faster/dp/0743253434" target="_blank"><img src="images/totalimmersion.jpeg"></a></div><div class="bookinfo"><h3>Total Immersion</h3><p>Teaches the very popular Total Immersion technique.</p></div>
     </div>
