--- a/workoutbeg.html
+++ b/workoutbeg.html
@@ -20,7 +20,7 @@
                 <ul class="dropnav">
                   <li><a href="poolnorth.html">North Austin</a></li>
                   <li><a href="poolnorth.html">South Austin</a></li>
-                  <li><a href="poolnorth.html">East Austin</a></li>
+                  <li><a href="poolsouth.html">East Austin</a></li>
                   <li><a href="poolnorth.html">West Austin</a></li>
                 </ul>
               </li>
