--- a/workoutmid.html
+++ b/workoutmid.html
@@ -20,7 +20,7 @@
               <a href="poolmain.html">Pools</a>
               <ul class="dropnav">
                 <li><a href="poolnorth.html">North Austin</a></li>
-                <li><a href="poolnorth.html">South Austin</a></li>
+                <li><a href="poolsouth.html">South Austin</a></li>
                 <li><a href="poolnorth.html">East Austin</a></li>
                 <li><a href="poolnorth.html">West Austin</a></li>
               </ul>
