committing hero img changes

--- a/poolnorth.html
+++ b/poolnorth.html
@@ -23,8 +23,8 @@
               <ul class="dropnav">
                 <li><a href="poolnorth.html">North Austin</a></li>
                 <li><a href="poolsouth.html">South Austin</a></li>
-                <li><a href="poolnorth.html">East Austin</a></li>
-                <li><a href="poolnorth.html">West Austin</a></li>
+                <li><a href="pooleast.html">East Austin</a></li>
+                <li><a href="poolwest.html">West Austin</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -43,7 +43,7 @@
       <div class="maxwidthcontainer">
     <div class="poolcontainer">
       <div class="hero">
-          <h1>South Austin Pools</h1>
+          <h1>North Austin Pools</h1>
       </div>
       <div class="poolimgsolo">
         <ul class="bxslider">
