--- a/poolwest.html
+++ b/poolwest.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>South Austin Pools</title>
+    <title>West Austin Pools</title>
      <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet"/>
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -43,7 +43,7 @@
       <div class="maxwidthcontainer">
     <div class="poolcontainer">
       <div class="hero">
-          <h1>South Austin Pools</h1>
+          <h1>West Austin Pools</h1>
       </div>
       <div class="poolimgsolo">
         <ul class="bxslider">
