--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
               <ul class="dropnav">
                 <li><a href="poolnorth.html">North Austin</a></li>
                 <li><a href="poolsouth.html">South Austin</a></li>
-                <li><a href="poolnorth.html">East Austin</a></li>
-                <li><a href="poolnorth.html">West Austin</a></li>
+                <li><a href="pooleast.html">East Austin</a></li>
+                <li><a href="poolwest.html">West Austin</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -68,11 +68,11 @@
         </div><h2>South Austin</h2></div>
           <div class="regionimg"><div class="imgWrap">
           <img class="poolimg" src="images/deepeddysmall.jpg"/>
-          <a href="poolnorth.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View Pools</p></a>
+          <a href="poolwest.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View Pools</p></a>
           </div><h2>West Austin</h2></div>
           <div class="regionimg"><div class="imgWrap">
           <img class="poolimg" src="images/dottiebrownsmall.jpg"/>
-          <a href="poolnorth.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View Pools</p></a>
+          <a href="pooleast.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View Pools</p></a>
           </div><h2>East Austin</h2></div>
         </div>
     </div>
