--- a/poolmain.html
+++ b/poolmain.html
@@ -22,8 +22,8 @@
               <ul class="dropnav">
                 <li><a href="poolnorth.html">North Austin</a></li>
                 <li><a href="poolsouth.html">South Austin</a></li>
-                <li><a href="poolnorth.html">East Austin</a></li>
-                <li><a href="poolnorth.html">West Austin</a></li>
+                <li><a href="pooleast.html">East Austin</a></li>
+                <li><a href="poolwest.html">West Austin</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -71,11 +71,11 @@
         </div></div>
           <div class="regionimg"><h2>West Austin</h2><div class="imgWrap">
           <img class="poolimg" src="images/deepeddysmall.jpg"/>
-          <a href="poolnorth.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View West<br> Austin Pools</p></a>
+          <a href="poolwest.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View West<br> Austin Pools</p></a>
           </div></div>
           <div class="regionimg"><h2>East Austin</h2><div class="imgWrap">
           <img class="poolimg" src="images/dottiebrownsmall.jpg"/>
-          <a href="poolnorth.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View East<br> Austin Pools</p></a>
+          <a href="pooleast.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View East<br> Austin Pools</p></a>
           </div></div>
         </div>
       </div>
