--- a/workoutadv.html
+++ b/workoutadv.html
@@ -20,8 +20,8 @@
               <ul class="dropnav">
                 <li><a href="poolnorth.html">North Austin</a></li>
                 <li><a href="poolsouth.html">South Austin</a></li>
-                <li><a href="poolnorth.html">East Austin</a></li>
-                <li><a href="poolnorth.html">West Austin</a></li>
+                <li><a href="pooleast.html">East Austin</a></li>
+                <li><a href="poolwest.html">West Austin</a></li>
               </ul>
             </li>
             <li class="dropdown">
