--- a/poolnorth.html
+++ b/poolnorth.html
@@ -132,7 +132,7 @@
 <div class="poolimgsolo">
   <ul class="bxslider">
 <li><img src="images/slider_bartonsprings.jpg"/></li>
-<li><img src="images/bsprings.jpg"/></li>
+<li><img src="images/slider_bspringstwo.jpg"/></li>
 <li><img src="images/slider_addphoto.jpg"/></li>
 </ul>
 </div>
