pushing up edits to links on workout page, instructional, and links on pool page

--- a/poolsouth.html
+++ b/poolsouth.html
@@ -82,7 +82,7 @@
             <li><a href="https://www.instagram.com/swiminaustin/"><img src="images/insta_1.png"></a></li>
             <li><a href="sharelink"><img src="images/connect_2.png"></a></li>
             </ul>
-            <a class="return" href="#poolmain.html"> Back to All Pools </a>
+            <a class="return" href="poolmain.html"> Back to All Pools </a>
             </div>
     </div>
   </div>
@@ -124,7 +124,7 @@
           <li><a href="https://www.instagram.com/swiminaustin/"><img src="images/insta_1.png"></a></li>
           <li><a href="sharelink"><img src="images/connect_2.png"></a></li>
           </ul>
-          <a class="return" href="#poolmain.html"> Back to All Pools </a>
+          <a class="return" href="poolmain.html"> Back to All Pools </a>
           </div>
   </div>
 </div>
@@ -166,7 +166,7 @@
         <li><a href="https://www.instagram.com/swiminaustin/"><img src="images/insta_1.png"></a></li>
         <li><a href="sharelink"><img src="images/connect_2.png"></a></li>
         </ul>
-        <a class="return" href="#poolmain.html"> Back to All Pools </a>
+        <a class="return" href="poolmain.html"> Back to All Pools </a>
         </div>
 </div>
 </div>
@@ -208,7 +208,7 @@
         <li><a href="https://www.instagram.com/swiminaustin/"><img src="images/insta_1.png"></a></li>
         <li><a href="sharelink"><img src="images/connect_2.png"></a></li>
         </ul>
-        <a class="return" href="#poolmain.html"> Back to All Pools </a>
+        <a class="return" href="poolmain.html"> Back to All Pools </a>
         </div>
 </div>
 </div>
