--- a/training.html
+++ b/training.html
@@ -67,7 +67,7 @@
       <h1>Technique</h1>
       <h2>Training videos and resources to help you improve technique</h2>
       <div class="techniquecontainer">
-      <div id="videos"><h2>Insructional Videos</h2><iframe width="350" height="300" src="https://www.youtube.com/embed/videoseries?list=PLyaEpFLI7bLZlG1azBwB5oNftggjMpgjS" frameborder="0" allowfullscreen></iframe></div>
+      <div id="videos"><h2>Instructional Videos</h2><iframe width="350" height="300" src="https://www.youtube.com/embed/videoseries?list=PLyaEpFLI7bLZlG1azBwB5oNftggjMpgjS" frameborder="0" allowfullscreen></iframe></div>
       <div id="books"><h2>Training Books</h2>
       <div class="bookimg"><a  href="https://www.amazon.com/Waterproof-Coach-Workout-Swimmers-Triathletes/dp/0965623009/ref=sr_1_3?ie=UTF8&qid=1485727287&sr=8-3&keywords=swim+workout+book" target="_blank"><img src="images/waterproofcoach.jpeg"></a></div><div class="bookinfo"><h3>The Waterproof Coach</h3><p>A waterproof book of customizable workouts</p></div>
       <div class="bookimg"><a  href="https://www.amazon.com/100-Best-Swimming-Drills/dp/1841263370/ref=sr_1_5?ie=UTF8&qid=1485727287&sr=8-5&keywords=swim+workout+book" target="_blank"><img src="images/100best.jpeg"></a></div><div class="bookinfo"><h3>The 100 Best Swimming Drills</h3><p>A guide to improving technique with drills</p></div>
