committing slider edits

--- a/poolsouth.html
+++ b/poolsouth.html
@@ -46,11 +46,17 @@
           <h1>South Austin Pools</h1>
       </div>
       <div class="poolimgsolo">
-        <ul class="bxslider">
-      <li><img src="images/Slider_Dicknichols.jpg"/></li>
-      <li><img src="images/Slider_dicknichols2.jpg"/></li>
-      <li><img src="images/slider_addphoto.jpg"/></li>
-      </ul>
+        <div class="images">
+    <img id="image1" src="images/bigstacy.jpg" />
+    <img id="image2" src="images/Big-Stacy.jpg" />
+    <img id="image3" src="images/shareimage.png" />
+  </div>
+  <div class="slider">
+    <a href="#image1"></a>
+    <a href="#image2"></a>
+    <a href="#image3"></a>
+  </div>
+
       </div>
     <div class="poolfacts">
         <div class="pooltext">
@@ -74,7 +80,6 @@
           </div>
         </section>
           <a href="http://www.austintexas.gov/department/dick-nichols-pool">website</a>
-        </div>
           <div class="sharecontainer">
             <h2>Share this pool #SwimATX</h2>
             <ul class="share">
@@ -82,17 +87,24 @@
             <li><a href="https://www.instagram.com/swiminaustin/"><img src="images/insta_1.png"></a></li>
             <li><a href="sharelink"><img src="images/connect_2.png"></a></li>
             </ul>
-            <a class="return" href="poolmain.html"> Back to All Pools </a>
+            <a class="return" href="#poolmain.html"> Back to All Pools </a>
             </div>
+        </div>
+
     </div>
   </div>
   <div class="poolcontainer">
     <div class="poolimgsolo">
-      <ul class="bxslider">
-    <li><img src="images/slider_bs.jpg"/></li>
-    <li><img src="images/slider_bstwo.jpg"/></li>
-    <li><img src="images/slider_addphoto.jpg"/></li>
-    </ul>
+      <div class="images">
+  <img id="image4" src="images/bigstacy.jpg" />
+  <img id="image5" src="images/Big-Stacy.jpg" />
+  <img id="image6" src="images/shareimage.png" />
+</div>
+<div class="slider">
+  <a href="#image4"></a>
+  <a href="#image5"></a>
+  <a href="#image6"></a>
+</div>
     </div>
   <div class="poolfacts">
       <div class="pooltext">
@@ -116,7 +128,6 @@
         </div>
       </section>
         <a href="https://austintexas.gov/department/big-stacy-pool">website</a>
-      </div>
         <div class="sharecontainer">
           <h2>Share this pool #SwimATX</h2>
           <ul class="share">
@@ -124,17 +135,24 @@
           <li><a href="https://www.instagram.com/swiminaustin/"><img src="images/insta_1.png"></a></li>
           <li><a href="sharelink"><img src="images/connect_2.png"></a></li>
           </ul>
-          <a class="return" href="poolmain.html"> Back to All Pools </a>
+          <a class="return" href="#poolmain.html"> Back to All Pools </a>
           </div>
+      </div>
+
   </div>
 </div>
 <div class="poolcontainer">
 <div class="poolimgsolo">
-  <ul class="bxslider">
-<li><img src="images/slider_bartonsprings.jpg"/></li>
-<li><img src="images/slider_bspringstwo.jpg"/></li>
-<li><img src="images/slider_addphoto.jpg"/></li>
-</ul>
+  <div class="images">
+<img id="image7" src="images/bigstacy.jpg" />
+<img id="image8" src="images/Big-Stacy.jpg" />
+<img id="image9" src="images/shareimage.png" />
+</div>
+<div class="slider">
+<a href="#image7"></a>
+<a href="#image8"></a>
+<a href="#image9"></a>
+</div>
 </div>
 <div class="poolfacts">
     <div class="pooltext">
@@ -158,7 +176,6 @@
       </div>
     </section>
       <a href="https://austintexas.gov/department/barton-springs-pool">website</a>
-    </div>
       <div class="sharecontainer">
         <h2>Share this pool #SwimATX</h2>
         <ul class="share">
@@ -166,17 +183,24 @@
         <li><a href="https://www.instagram.com/swiminaustin/"><img src="images/insta_1.png"></a></li>
         <li><a href="sharelink"><img src="images/connect_2.png"></a></li>
         </ul>
-        <a class="return" href="poolmain.html"> Back to All Pools </a>
+        <a class="return" href="#poolmain.html"> Back to All Pools </a>
         </div>
+    </div>
+
 </div>
 </div>
 <div class="poolcontainer">
 <div class="poolimgsolo">
-  <ul class="bxslider">
-<li><img src="images/slider_garrison.jpg"/></li>
-<li><img src="images/slide_garrison2.jpg"/></li>
-<li><img src="images/slider_addphoto.jpg"/></li>
-</ul>
+  <div class="images">
+<img id="image10" src="images/bigstacy.jpg" />
+<img id="image11" src="images/Big-Stacy.jpg" />
+<img id="image12" src="images/shareimage.png" />
+</div>
+<div class="slider">
+<a href="#image10"></a>
+<a href="#image11"></a>
+<a href="#image12"></a>
+</div>
 </div>
 <div class="poolfacts">
     <div class="pooltext">
@@ -200,7 +224,6 @@
       </div>
     </section>
       <a href="http://www.austintexas.gov/department/garrison-pool">website</a>
-    </div>
       <div class="sharecontainer">
         <h2>Share this pool #SwimATX</h2>
         <ul class="share">
@@ -208,8 +231,10 @@
         <li><a href="https://www.instagram.com/swiminaustin/"><img src="images/insta_1.png"></a></li>
         <li><a href="sharelink"><img src="images/connect_2.png"></a></li>
         </ul>
-        <a class="return" href="poolmain.html"> Back to All Pools </a>
+        <a class="return" href="#poolmain.html"> Back to All Pools </a>
         </div>
+    </div>
+
 </div>
 </div>
 </div>
