--- a/pool.html
+++ b/pool.html
@@ -7,32 +7,26 @@
      <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet"/>
      <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet"/>
      <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700|Oswald:300,400" rel="stylesheet">
-    <link href="stylesheets/main.css" rel="stylesheet"/>
+      <link href="stylesheets/main.css" rel="stylesheet"/>
   </head>
   <body>
     <main>
-      <h1>Incredibly Basic Slider</h1>
-<div id="slider">
-  <a href="#" class="control_next">next</a>
-  <a href="#" class="control_prev">prev</a>
-  <ul>
-    <li>SLIDE 1</li>
-    <li style="background: #aaa;">SLIDE 2</li>
-    <li>SLIDE 3</li>
-    <li style="background: #aaa;">SLIDE 4</li>
-  </ul>
+      <div class="images">
+  <img id="image1" src="images/bigstacy.jpg" />
+  <img id="image2" src="images/Big-Stacy.jpg" />
+  <img id="image3" src="images/shareimage.png" />
 </div>
-
-<div class="slider_option">
-  <input type="checkbox" id="checkbox">
-  <label for="checkbox">Autoplay Slider</label>
+<div class="slider">
+  <a href="#image1"></a>
+  <a href="#image2"></a>
+  <a href="#image3"></a>
 </div>
 
     <footer>
          </footer>
   </main>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/0.9.0rc1/jspdf.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-  <script type="text/javascript" src="js/main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+      <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
+      <script type="text/javascript" src="js/slider.js"></script>
   </body>
 </html>
