committing img changes

--- a/pooleast.html
+++ b/pooleast.html
@@ -107,7 +107,7 @@
     </div>
   <div class="poolfacts">
       <div class="pooltext">
-        <h2>Mabel Davis</h2>
+        <h2>Mabel Davis Pool</h2>
         <a href="https://goo.gl/maps/N9fXfMGbwK42"> 3427 Parker Ln, Austin, TX 78741</a>
         <p>Phone:(512) 441-5247</p>
         <p>Small neighborhood pool for lap swimming & recreation. neighboring park with running trails.</p>
