--- a/poolnorth.html
+++ b/poolnorth.html
@@ -46,7 +46,7 @@
       </div>
       <div class="poolimgsolo">
         <div class="images">
-    <img id="image1" src="images/balcones.jpg" />
+    <img id="image1" src="images/balcones1.jpg" />
     <img id="image2" src="images/balcones2.jpg" />
     <img id="image3" src="images/balcones3.jpg" />
   </div>
