committing img name changes

--- a/poolsouth.html
+++ b/poolsouth.html
@@ -46,7 +46,7 @@
       </div>
       <div class="poolimgsolo">
         <div class="images">
-    <img id="image1" src="images/dicknichols.jpg" />
+    <img id="image1" src="images/dicknichols1.jpg" />
     <img id="image2" src="images/dicknichols2.jpg" />
     <img id="image3" src="images/dicknichols3.jpg" />
   </div>
