updates to pool info

--- a/poolwest.html
+++ b/poolwest.html
@@ -46,9 +46,9 @@
       </div>
       <div class="poolimgsolo">
         <div class="images">
-    <img id="image1" src="images/bigstacy.jpg" />
-    <img id="image2" src="images/Big-Stacy.jpg" />
-    <img id="image3" src="images/shareimage.png" />
+    <img id="image1" src="images/deepeddy.jpg" />
+    <img id="image2" src="images/deepeddy2.jpg" />
+    <img id="image3" src="images/deepeddy3.jpg" />
   </div>
   <div class="slider">
     <a href="#image1"></a>
@@ -59,10 +59,10 @@
       </div>
     <div class="poolfacts">
         <div class="pooltext">
-          <h2>Dick Nichols Pool</h2>
-          <a href="https://www.google.com/maps/place/8011+Beckett+Rd,+Austin,+TX+78749/@30.2139446,-97.8656101,17z/data=!3m1!4b1!4m5!3m4!1s0x865b4be57ae75f37:0xc5537a5493011f03!8m2!3d30.2139446!4d-97.8634214">8011 Beckett Rd, Austin, TX 78749</a>
-          <p>Phone:(512) 899-0348</p>
-          <p>Dick Nichols has two pools: one for lap swimmers with a deep end, and another shallow, wading pool. The pool is surrounded by a park with a 1.1 mile hike and bike trail, sports courts and a large shaded playground.</p>
+          <h2>Deep Eddy Pool</h2>
+          <a href="https://goo.gl/maps/P7jpbZsrhd72">401 Deep Eddy Ave, Austin, TX 78703</a>
+          <p>Phone:(512) 472-8546</p>
+          <p>Oldest Hand-dug pool in the state with a separate pool just for lap swimming. The pool is spring fed so the water can be a bit chilly (65-72degrees year-round) and sometimes a bit cloudy. Lap pool length is a little over 25 meters and 5 lanes are always reserved for lap swimmers.</p>
           <section class="ac-container">
           <div>
             <input id="ac-1" name="accordion-1" type="checkbox" />
@@ -78,7 +78,7 @@
             </article>
           </div>
         </section>
-          <a href="http://www.austintexas.gov/department/dick-nichols-pool">website</a>
+          <a href="http://www.austintexas.gov/department/deep-eddy-pool">website</a>
           <div class="sharecontainer">
             <h2>Share this pool #SwimATX</h2>
             <ul class="share">
@@ -95,9 +95,9 @@
   <div class="poolcontainer">
     <div class="poolimgsolo">
       <div class="images">
-  <img id="image4" src="images/bigstacy.jpg" />
-  <img id="image5" src="images/Big-Stacy.jpg" />
-  <img id="image6" src="images/shareimage.png" />
+  <img id="image4" src="images/reedpool.jpg" />
+  <img id="image5" src="images/reedpool2.jpg" />
+  <img id="image6" src="images/reedpool3.jpg" />
 </div>
 <div class="slider">
   <a href="#image4"></a>
@@ -107,10 +107,10 @@
     </div>
   <div class="poolfacts">
       <div class="pooltext">
-        <h2>Big Stacy Pool</h2>
-        <a href="https://goo.gl/maps/ZVX4UHUoY162">700 E Live Oak St, Austin, TX 78704</a>
-        <p>Phone:(512) 445-0304</p>
-        <p>Small neighborhood pool for lap swimming & recreation. Open year round and always free entrance. 3 lap lanes reserved for lap swimming at all times.</p>
+        <h2>Reed Pool</h2>
+        <a href="https://goo.gl/maps/St6m4oBSXhu">2600 Pecos St., Austin, TX 78703</a>
+        <p>Phone:(512) 477-1566</p>
+        <p>Small, neighborhood pool with one lane always roped off for lap swimmers. Shallow, 25 meters and reserved for lap swimmers on weekday mornings. Surrounding nature trails and great neighborhood for running and biking.</p>
         <section class="ac-container">
         <div>
           <input id="ac-2" name="accordion-1" type="checkbox" />
@@ -126,7 +126,7 @@
           </article>
         </div>
       </section>
-        <a href="https://austintexas.gov/department/big-stacy-pool">website</a>
+        <a href="http://www.austintexas.gov/department/reed-pool">website</a>
         <div class="sharecontainer">
           <h2>Share this pool #SwimATX</h2>
           <ul class="share">
@@ -143,9 +143,9 @@
 <div class="poolcontainer">
 <div class="poolimgsolo">
   <div class="images">
-<img id="image7" src="images/bigstacy.jpg" />
-<img id="image8" src="images/Big-Stacy.jpg" />
-<img id="image9" src="images/shareimage.png" />
+<img id="image7" src="images/murchison1.jpg" />
+<img id="image8" src="images/murchison2.jpg" />
+<img id="image9" src="images/murchison3.jpg" />
 </div>
 <div class="slider">
 <a href="#image7"></a>
@@ -155,10 +155,10 @@
 </div>
 <div class="poolfacts">
     <div class="pooltext">
-      <h2>Barton Springs Pool</h2>
-      <a href="https://goo.gl/maps/HEeE9cf6V4H2">2201 Barton Springs Rd, Austin, TX 78746</a>
-      <p>Phone:(512) 867-3080</p>
-      <p>Beloved spring-fed pool maintaining a 68ºF temperature year-round with lifeguards on duty.Open year round. Great for open water swimming.</p>
+      <h2>WestEnfield Pool</h2>
+      <a href="https://goo.gl/maps/ykLMToKs3fs">2000 Enfield Rd, Austin, TX 78703</a>
+      <p>Phone:(512) 974-6700</p>
+      <p>WestEnfield is a recently renovated community pool with a lap pool and a separate, shallow acticity pool for children and wading. Lap pool is 25 yards with at least two lap lanes reserved at all times for lap swimmers.</p>
       <section class="ac-container">
       <div>
         <input id="ac-3" name="accordion-1" type="checkbox" />
@@ -174,7 +174,7 @@
         </article>
       </div>
     </section>
-      <a href="https://austintexas.gov/department/barton-springs-pool">website</a>
+      <a href="http://www.austintexas.gov/department/westenfield-pool">website</a>
       <div class="sharecontainer">
         <h2>Share this pool #SwimATX</h2>
         <ul class="share">
