committing changes to schedules and images

--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
       <div class="regioncontainer">
           <div class="regionimg">
           <div class="imgWrap">
-          <img class="poolimg" src="images/Northwestsmall.jpg"/>
+          <img class="poolimg" src="images/balconessmall.png"/>
           <a href="poolnorth.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View Pools</p></a>
           </div><h2>North Austin</h2></div>
           <div class="regionimg"><div class="imgWrap">
-          <img class="poolimg" src="images/dicknicholssmall.jpg"/>
+          <img class="poolimg" src="images/bartonspringssmall.png"/>
           <a href="poolsouth.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View Pools</p></a>
         </div><h2>South Austin</h2></div>
           <div class="regionimg"><div class="imgWrap">
-          <img class="poolimg" src="images/deepeddysmall.jpg"/>
+          <img class="poolimg" src="images/enfieldsmall.png"/>
           <a href="poolwest.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View Pools</p></a>
           </div><h2>West Austin</h2></div>
           <div class="regionimg"><div class="imgWrap">
-          <img class="poolimg" src="images/dottiebrownsmall.jpg"/>
+          <img class="poolimg" src="images/bartholomewsmall.png">
           <a href="pooleast.html"><p class="imgDescription"><img class="viewmore" src="images/viewmore.png"><br>View Pools</p></a>
           </div><h2>East Austin</h2></div>
         </div>
