--- a/pooleast.html
+++ b/pooleast.html
@@ -68,13 +68,10 @@
             <input id="ac-1" name="accordion-1" type="checkbox" />
             <label for="ac-1">Schedule</label>
             <article class="ac-small">
-              <p>Monday<br></p>
-              <p>Tuesday<br></p>
-              <p>Wednesday<br></p>
-              <p>Thursday<br></p>
-              <p>Friday<br></p>
-              <p>Saturday<br></p>
-              <p>Sunday<br></p>
+              <p>Status: Open<br>
+                Weekdays: 3 pm - 8 pm<br>
+                Weekends: 1 pm - 5pm<br>
+                Weekday Closure: N/A</p>
             </article>
           </div>
         </section>
@@ -116,13 +113,10 @@
           <input id="ac-2" name="accordion-1" type="checkbox" />
           <label for="ac-2">Schedule</label>
           <article class="ac-small">
-            <p>Monday<br></p>
-            <p>Tuesday<br></p>
-            <p>Wednesday<br></p>
-            <p>Thursday<br></p>
-            <p>Friday<br></p>
-            <p>Saturday<br></p>
-            <p>Sunday<br></p>
+            <p>Status: Closed for Season<br>
+              Weekdays: 12 pm - 7 pm<br>
+              Weekends: 12 pm - 7pm<br>
+              Weekday Closure: Monday</p>
           </article>
         </div>
       </section>
@@ -164,13 +158,10 @@
         <input id="ac-3" name="accordion-1" type="checkbox" />
         <label for="ac-3">Schedule</label>
         <article class="ac-small">
-          <p>Monday<br></p>
-          <p>Tuesday<br></p>
-          <p>Wednesday<br></p>
-          <p>Thursday<br></p>
-          <p>Friday<br></p>
-          <p>Saturday<br></p>
-          <p>Sunday<br></p>
+          <p>Status: Closed for Season<br>
+            Weekdays: 11 am - 8 pm<br>
+            Weekends: 11 am - 8pm<br>
+            Weekday Closure: Wednesday</p>
         </article>
       </div>
     </section>
