--- a/poolwest.html
+++ b/poolwest.html
@@ -68,13 +68,10 @@
             <input id="ac-1" name="accordion-1" type="checkbox" />
             <label for="ac-1">Schedule</label>
             <article class="ac-small">
-              <p>Monday<br></p>
-              <p>Tuesday<br></p>
-              <p>Wednesday<br></p>
-              <p>Thursday<br></p>
-              <p>Friday<br></p>
-              <p>Saturday<br></p>
-              <p>Sunday<br></p>
+              <p>Status: Open<br>
+                Weekdays: 8 am - 8 pm<br>
+                Weekends: 8 am - 8pm<br>
+                Weekday Closure: N/A</p>
             </article>
           </div>
         </section>
@@ -116,13 +113,10 @@
           <input id="ac-2" name="accordion-1" type="checkbox" />
           <label for="ac-2">Schedule</label>
           <article class="ac-small">
-            <p>Monday<br></p>
-            <p>Tuesday<br></p>
-            <p>Wednesday<br></p>
-            <p>Thursday<br></p>
-            <p>Friday<br></p>
-            <p>Saturday<br></p>
-            <p>Sunday<br></p>
+            <p>Status: Closed for Season<br>
+              Weekdays: 8 am - 8 pm<br>
+              Weekends: 11 am - 8pm<br>
+              Weekday Closure: Tuesday</p>
           </article>
         </div>
       </section>
@@ -143,9 +137,9 @@
 <div class="poolcontainer">
 <div class="poolimgsolo">
   <div class="images">
-<img id="image7" src="images/murchison1.jpg" />
-<img id="image8" src="images/murchison2.jpg" />
-<img id="image9" src="images/murchison3.jpg" />
+<img id="image7" src="images/enfield.jpg" />
+<img id="image8" src="images/enfield2.jpg" />
+<img id="image9" src="images/enfield3.jpg" />
 </div>
 <div class="slider">
 <a href="#image7"></a>
@@ -157,20 +151,17 @@
     <div class="pooltext">
       <h2>WestEnfield Pool</h2>
       <a href="https://goo.gl/maps/ykLMToKs3fs">2000 Enfield Rd, Austin, TX 78703</a>
-      <p>Phone:(512) 974-6700</p>
+      <p>Phone: (512) 974-9331</p>
       <p>WestEnfield is a recently renovated community pool with a lap pool and a separate, shallow acticity pool for children and wading. Lap pool is 25 yards with at least two lap lanes reserved at all times for lap swimmers.</p>
       <section class="ac-container">
       <div>
         <input id="ac-3" name="accordion-1" type="checkbox" />
         <label for="ac-3">Schedule</label>
         <article class="ac-small">
-          <p>Monday<br></p>
-          <p>Tuesday<br></p>
-          <p>Wednesday<br></p>
-          <p>Thursday<br></p>
-          <p>Friday<br></p>
-          <p>Saturday<br></p>
-          <p>Sunday<br></p>
+          <p>Status: Closed for Season<br>
+            Weekdays: 8 am - 8 pm<br>
+            Weekends: 11 am - 8pm<br>
+            Weekday Closure: Wedesday</p>
         </article>
       </div>
     </section>
@@ -191,9 +182,9 @@
 <div class="poolcontainer">
 <div class="poolimgsolo">
   <div class="images">
-<img id="image10" src="images/bigstacy.jpg" />
-<img id="image11" src="images/Big-Stacy.jpg" />
-<img id="image12" src="images/shareimage.png" />
+<img id="image10" src="images/murchison1.jpg" />
+<img id="image11" src="images/murchison2.jpg" />
+<img id="image12" src="images/murchison3.jpg" />
 </div>
 <div class="slider">
 <a href="#image10"></a>
@@ -203,26 +194,23 @@
 </div>
 <div class="poolfacts">
     <div class="pooltext">
-      <h2>Garrison Pool</h2>
-      <a href="https://goo.gl/maps/YFXZ5dzdkaz">6001 Manchaca Rd, Austin, TX 78745</a>
-      <p>Phone:(512) 442-4048</p>
-      <p>Olympic sized pool, plenty of shade and grass, and a deep end with a diving board. The water is fairly warm. Plenty of free parking.</p>
+      <h2>Murchison Pool</h2>
+      <a href="https://goo.gl/maps/rXhNrCdSvcS2">3700 North Hills Drive in Austin, TX 78731</a>
+      <p>Phone:(512) 974-9331</p>
+      <p>25 yard pool next to Murchison Middle School. Great for triathlon training as it is next to the Murchison Middle School track with plenty of bike routes and running trails in the surrounding neighborhood. Check pool hours for reserved lap swimming hours and to avoid summer swim league practice times.</p>
       <section class="ac-container">
       <div>
         <input id="ac-4" name="accordion-1" type="checkbox" />
         <label for="ac-4">Schedule</label>
         <article class="ac-small">
-          <p>Monday<br></p>
-          <p>Tuesday<br></p>
-          <p>Wednesday<br></p>
-          <p>Thursday<br></p>
-          <p>Friday<br></p>
-          <p>Saturday<br></p>
-          <p>Sunday<br></p>
+          <p>Status: Closed for Season<br>
+            Weekdays: 8 am - 8 pm<br>
+            Weekends: 11 am - 8pm<br>
+            Weekday Closure: Monday</p>
         </article>
       </div>
     </section>
-      <a href="http://www.austintexas.gov/department/garrison-pool">website</a>
+      <a href="http://www.austintexas.gov/department/murchison-pool">website</a>
       <div class="sharecontainer">
         <h2>Share this pool #SwimATX</h2>
         <ul class="share">
